# IZG

./: CMakeLists.txt  Doxyfile  README.md
doc/html/: annotated.html  application_8cpp.html  application_8hpp.html  application_8hpp_source.html  arguments_8hpp.html  arguments_8hpp_source.html  bunny_8cpp.html  bunny_8hpp.html  bunny_8hpp_source.html  classApplication.html  classArguments.html  classCZFlagMethod.html  classEmptyMethod.html  classGPU.html  classMethod.html  classPhongMethod.html  classTimer.html  classTriangle3DMethod.html  classTriangleBufferMethod.html  classTriangleClip1Method.html  classTriangleClip2Method.html  classTriangleMethod.html  classWindow.html  classes.html  czFlagMethod_8cpp.html  czFlagMethod_8hpp.html  czFlagMethod_8hpp_source.html  dir_df997ef5cbe81af8266600b381d65502.html  emptyMethod_8hpp.html  emptyMethod_8hpp_source.html  files.html  formula.repository  functions.html  functions_func.html  functions_type.html  functions_vars.html  fwd_8hpp.html  fwd_8hpp_source.html  globals.html  globals_enum.html  (+52 more)
doc/latex/: annotated.tex  application_8cpp.tex  application_8hpp.tex  arguments_8hpp.tex  bunny_8cpp.tex  bunny_8hpp.tex  classApplication.eps  classApplication.tex  classArguments.tex  classCZFlagMethod.eps  classCZFlagMethod.tex  classEmptyMethod.eps  classEmptyMethod.tex  classGPU.tex  classMethod.eps  classMethod.tex  classPhongMethod.eps  classPhongMethod.tex  classTimer.tex  classTriangle3DMethod.eps  classTriangle3DMethod.tex  classTriangleBufferMethod.eps  classTriangleBufferMethod.tex  classTriangleClip1Method.eps  classTriangleClip1Method.tex  classTriangleClip2Method.eps  classTriangleClip2Method.tex  classTriangleMethod.eps  classTriangleMethod.tex  classWindow.eps  classWindow.tex  files.tex  (+43 more)
student/: application.cpp  application.hpp  arguments.hpp  bunny.cpp  czFlagMethod.cpp  czFlagMethod.hpp  emptyMethod.hpp  fwd.hpp  gpu.cpp  gpu.hpp  main.cpp  method.hpp  phongMethod.cpp  phongMethod.hpp  triangle3DMethod.cpp  triangle3DMethod.hpp  triangleBufferMethod.cpp  triangleBufferMethod.hpp  triangleClip1Method.cpp  triangleClip1Method.hpp  triangleClip2Method.cpp  triangleClip2Method.hpp  triangleMethod.cpp  triangleMethod.hpp  window.cpp
tests/: bufferTests.cpp  clippingTests.cpp  conformanceTests.cpp  conformanceTests.hpp  fragmentShaderTests.cpp  framebufferTests.cpp  performanceTest.cpp  programTests.cpp  renderPhongFrame.cpp  renderPhongFrame.hpp  takeScreenShot.cpp  testCommon.cpp  testCommon.hpp  vertexPullerTests.cpp  vertexShaderTests.cpp
(+84 files in other folders)
